k8s/istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-gateway-vs
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - ecommerce-gateway
  http:
  - match:
    - uri:
        prefix: /kafdrop
    # TUYỆT ĐỐI KHÔNG DÙNG REWRITE Ở ĐÂY
    route:
    - destination:
        host: kafdrop.kafka.svc.cluster.local
        port:
          number: 9000
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: web-gateway
        port:
          number: 8090
